--- a/login/style.css
+++ b/login/style.css
@@ -561,7 +561,7 @@ li.social-links a {
 }
 
 .section.lb {
-    background-color: #f2f3f5;
+    /* background-color: #f2f3f5; */
 }
 
 .section.db {
